# Modern_History_RAG_Chatbot

./: .env  README.md  arch.drawio  backend.py  clear_cache.py  config.yaml  create_embeddings.py  create_vector_db.py  data_extractor.py  evaluation.py  frontend.py  graph.py  llm.py  main.py  prompts.py  pyproject.toml  requirements.txt  retriever.py  schema.py  semantic_data_extractor.py  test.py
cache/: cache_database.sqlite
data/evaluation/: ragas_evaluation_dataset.csv  ragas_evaluation_results.csv  ragas_evaluation_results.xlsx
data/processed/: doc_chunks.json
data/processed/faiss_vector_db/: index.faiss  index.pkl
