[project]
name = "ww-ii-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.138.2",
    "fitz>=0.0.1.dev2",
    "grandalf>=0.8",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.9.2",
    "nemoguardrails>=0.23.0",
    "pypdf2>=3.0.1",
    "ragas==0.3.9",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.2",
    "torchvision>=0.27.1",
    "uvicorn>=0.49.0",
    "voyageai>=0.4.1",
]
